master: metamask user
